--- a/style.css
+++ b/style.css
@@ -7,3 +7,16 @@ ul{
     /* border: 1px solid red; */
     padding: 0px;
 }
+.blue{
+    background-color: blue;
+}
+.image{
+    border: 1px solid red;
+    width: 50px;
+    height: 50px;
+}
+.image-two {
+    width: 500px;
+    height: 500px;
+    border-radius: 100% ;
+}
